# smit-insurance-calculation

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: setup.py
migrations/smit_insurance_calculation/: 0_20230714194048_init.py
smit_insurance_calculation/: __main__.py
smit_insurance_calculation/api/: exception.py  setup.py
smit_insurance_calculation/api/endpoints/: cargo.py  rate.py  setup.py
smit_insurance_calculation/api/responses/: __init__.py  main.py  rate.py
smit_insurance_calculation/core/: event.py  repo.py
smit_insurance_calculation/core/enums/: __init__.py  cargo.py
smit_insurance_calculation/core/exceptions/: __init__.py  main.py  rate.py
smit_insurance_calculation/core/models/: __init__.py
smit_insurance_calculation/core/models/pydantic/: cargo.py  rate.py  setting.py
smit_insurance_calculation/core/models/tortoise/: rate.py
